# NeuralLife

./: CMakeLists.txt  README.md
src/: Config.h  Creature.cpp  Creature.h  Random.cpp  Random.h  World.cpp  World.h  main.cpp
